[tool.poetry]
name = "neows-consumer"
version = "0.1.0"
description = "Demonstration of API consumer in Python"
authors = ["Bruno Kim <brunokim.mc@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "neows_consumer"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pre-commit = "^3.2.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
